# tree-sitter-get-column-bug

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-get_column_bug.h  tree-sitter-get_column_bug.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_get_column_bug/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGetColumnBugTests/: TreeSitterGetColumnBugTests.swift
src/: grammar.json  node-types.json  parser.c  scanner.c
