[package]
name = "tree-sitter-get-column-bug"
description = "GetColumnBug grammar for tree-sitter"
version = "0.1.0"
authors = ["Segev Finer <segev@swimm.io>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "get-column-bug"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-get_column_bug"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.2"
